// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependency.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

module.exports = 0;

=====================================output=====================================
// @flow

module.exports = 0;

================================================================================
`;

exports[`focused.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

(require('./dependency'): string);

=====================================output=====================================
// @flow

(require("./dependency"): string);

================================================================================
`;
